<resources>
    <string name="app_name">VisualDSA</string>
    <string name="visualDSAstrings">VisualDSA</string>
    <string name="watch_and_learn_the_algorithms">watch and learn the algorithms..</string>
    <string name="ride_along_the_algorithms_as_they_go">Ride along the algorithms as they go..</string>
    <string name="welcome">Welcome to VisualDSA</string>
    <string name="search_algorithms">Search Algorithms</string>
    <string name="sorting_algorithms">Sorting Algorithms</string>
    <string name="graph_algorithms">Graph Algorithms</string>
    <string name="tree_algorithms">Tree Algorithms</string>
    <string name="todo">TODO</string>
    <string name="title">title</string>
    <string name="description">description</string>
    <string name="autocompletetextview">AutoCompleteTextView</string>
    <string name="hint">hint</string>
    <string name="randomize">Randomize</string>
    <string name="start">Start</string>
    <string name="size">size</string>
    <string name="slider">slider</string>
    <string name="hello">hello</string>
    <string name="clear">clear</string>
    <string name="select">select</string>
    <string-array name="searchAlgorithmList">
        <item>Linear Search</item>
        <item>Binary Search</item>
    </string-array>
    <string-array name="sortAlgorithmList">
        <item>Bubble Sort</item>
        <item>Insertion Sort</item>
        <item>Merge Sort</item>
        <item>Quick Sort</item>
    </string-array>
    <item name="b0" type="id" />
    <item name="b1" type="id" />
    <item name="b2" type="id" />
    <item name="b3" type="id" />
    <item name="b4" type="id" />
    <item name="b5" type="id" />
    <item name="b6" type="id" />
    <item name="b7" type="id" />
    <item name="b8" type="id" />
    <item name="b9" type="id" />
</resources>