<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".mazeActivity">

    <LinearLayout
        android:id="@+id/col2"
        android:layout_width="302dp"
        android:layout_height="516dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="100dp"

        android:layout_weight="1"
        android:baselineAligned="false"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/randomize_maze"
        android:layout_width="128dp"
        android:layout_height="62dp"
        android:layout_marginStart="16sp"
        android:layout_marginBottom="36sp"
        android:text="@string/randomize"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/clear_maze"
        android:layout_width="103dp"
        android:layout_height="61dp"
        android:layout_marginEnd="136dp"
        android:layout_marginBottom="36dp"
        android:text="@string/clear"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/star_maze"
        android:layout_width="110dp"
        android:layout_height="58dp"
        android:layout_marginEnd="16sp"
        android:layout_marginBottom="36sp"
        android:text="@string/start"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
    <TextView
        android:id="@+id/textView400"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="160dp"
        android:layout_marginEnd="12dp"
        android:text="@string/size"
        android:textColor="@color/purple_200"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/slider_maze"
        tools:ignore="MissingConstraints" />

    <Spinner
        android:id="@+id/spinner_maze1"
        android:layout_width="207sp"
        android:layout_height="57sp"
        android:layout_marginStart="30sp"

        android:layout_marginTop="16sp"
        android:layout_marginEnd="100sp"
        android:minHeight="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints,SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <com.google.android.material.slider.Slider
        android:id="@+id/slider_maze"
        android:layout_width="340sp"
        android:layout_height="144sp"
        android:layout_marginStart="192sp"
        android:layout_marginTop="236sp"
        android:contentDescription="@string/slider"
        android:rotation="270"
        android:stepSize="1"
        android:value="6"
        android:valueFrom="6"
        android:valueTo="20"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner_maze1"
        tools:ignore="MissingConstraints" />

    <Spinner
        android:id="@+id/spinner_maze2"
        android:layout_width="135sp"
        android:layout_height="57sp"
        android:layout_marginTop="16sp"
        android:layout_marginEnd="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
</androidx.constraintlayout.widget.ConstraintLayout>