<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/layout_bg"

    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="377dp"
        android:layout_height="147dp"
        android:baselineAligned="false"
        android:gravity="center"
        android:orientation="horizontal"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="219dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/title"
                android:layout_width="186dp"
                android:layout_height="59dp"
                android:layout_marginStart="15dp"
                android:paddingTop="5sp"
                android:text="@string/title"
                android:textAllCaps="true"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/description"
                android:layout_width="197dp"
                android:layout_height="73dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="5dp"
                android:text="@string/description"
                android:textSize="16sp" />
        </LinearLayout>

        <ImageView
            android:id="@+id/icon"
            android:layout_width="155dp"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:contentDescription="@string/todo"
            android:scaleType="fitXY"
            app:srcCompat="@mipmap/ic_launcher"
            tools:ignore="ImageContrastCheck" />
    </LinearLayout>


</LinearLayout>