<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".sortingAlgoActivity">

<!--    <TextView-->
<!--        android:id="@+id/textView5"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginStart="107sp"-->
<!--        android:layout_marginTop="40sp"-->
<!--        android:text="@string/sorting_algorithms"-->
<!--        android:textSize="24sp"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent" />-->

    <LinearLayout
        android:id="@+id/col1"
        android:layout_width="294sp"
        android:layout_height="461sp"
        android:layout_marginStart="12sp"
        android:layout_marginBottom="58sp"
        android:layout_weight="1"

        android:baselineAligned="false"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/randomize_sort"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <Spinner
        android:id="@+id/spinner_sort1"
        android:layout_width="202sp"
        android:layout_height="55sp"
        android:layout_marginStart="30sp"

        android:layout_marginTop="28sp"
        android:layout_marginEnd="100sp"
        android:minHeight="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints,SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <Button
        android:id="@+id/randomize_sort"
        android:layout_width="169sp"
        android:layout_height="62sp"
        android:layout_marginStart="16sp"
        android:layout_marginBottom="36sp"
        android:text="@string/randomize"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/start_sort"
        android:layout_width="182sp"
        android:layout_height="64sp"
        android:layout_marginEnd="16sp"
        android:layout_marginBottom="36sp"
        android:text="@string/start"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.slider.Slider
        android:id="@+id/slider_sort"
        android:layout_width="340sp"
        android:layout_height="144sp"
        android:layout_marginStart="184sp"
        android:layout_marginTop="216sp"
        android:contentDescription="@string/slider"
        android:rotation="270"
        android:stepSize="1"
        android:value="6"
        android:valueFrom="6"
        android:valueTo="20"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner_sort1"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView40"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20sp"
        android:layout_marginBottom="125sp"
        android:text="@string/size"
        android:textColor="@color/purple_200"
        android:textSize="24sp"

        app:layout_constraintBottom_toTopOf="@+id/start_sort"
        app:layout_constraintEnd_toEndOf="parent" />

    <Spinner
        android:id="@+id/spinner_sort2"
        android:layout_width="145sp"
        android:layout_height="57sp"
        android:layout_marginTop="28sp"
        android:layout_marginEnd="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
</androidx.constraintlayout.widget.ConstraintLayout>